--- a/venv3/pyvenv.cfg
+++ b/venv3/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Program Files\Python312
+home = /usr/bin
 include-system-site-packages = false
-version = 3.12.6
-executable = C:\Program Files\Python312\python.exe
-command = C:\Program Files\Python312\python.exe -m venv C:\Users\jwsch\Documents\GitHub\BHP\venv3
+version = 3.13.3
+executable = /usr/bin/python3.13
+command = /usr/bin/python -m venv /home/kali/programming/BHP/venv3
